HelloUltraviolet/Fixtures/RejectedSource/Procedures/MainSignature/Expected.uv
//! Expected diagnostic metadata for the MainSignature rejected-source specimen.

expectedDiagnostic("E-MOD-2431", "rule.15.Main-Signature-Err")
